[package]
name = "mat2image"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Utilities to convert opencv::Mat to image::DynamicImage"
repository = "https://github.com/rcastill/mat2image"
exclude = [
  "examples/*",
  "Makefile"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[dependencies]
image = "0.25.2"
opencv = "0.93.1"
rgb = "0.8.50"
# Copy rgb dependency from
# https://github.com/twistedfall/opencv-rust/blob/v0.66.0/Cargo.toml
# version 0.8.20 doesn't contain the deficiency mentioned in
# https://deps.rs/crate/opencv/0.59.0#vulnerabilities

thiserror = "1.0"

[dependencies.rayon]
version = "1.5"
optional = true

[features]
default = ["rayon"]
experimental = []